--- a/index.html
+++ b/index.html
@@ -442,6 +442,9 @@ root_
 					{ src: 'plugin/notes/notes.js', async: true }
 				]
 			});
+            
+            //My options
+            Reveal.configure({ slideNumber: 'h.v' });
 
 		</script>
 
